--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "color-thumbs",
-  "version": "1.0.0",
-  "description": "pick dominant colors from uploaded image",
+  "version": "1.1.0",
+  "description": "pick dominant HEX thumbs from uploaded image",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
